Ajustes transição de telas e identação

--- a/app/src/main/res/layout/activity_edit_csolicitacoes.xml
+++ b/app/src/main/res/layout/activity_edit_csolicitacoes.xml
@@ -1,22 +1,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
+    android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_width="fill_parent">
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
-    <LinearLayout android:layout_width="fill_parent"
+    <LinearLayout
         android:id="@+id/EditSolCabecalho"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:background="@color/colorPrimary"
+        android:orientation="horizontal"
         android:padding="10dip">
 
-        <TextView android:textColor="#FFFFFF"
+        <TextView
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_width="fill_parent"
             android:gravity="center_horizontal"
-            android:text="@string/llEditSolCabec" />
+            android:text="@string/llEditSolCabec"
+            android:textColor="#FFFFFF" />
 
     </LinearLayout>
 
@@ -25,27 +27,27 @@
         android:id="@+id/llSol"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_below="@id/EditSolCabecalho">
+        android:layout_below="@id/EditSolCabecalho"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/txtView1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/txtSolCod"
-            android:textStyle="bold|italic"/>
+            android:textStyle="bold|italic" />
 
         <TextView
             android:id="@+id/txtSolCod"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/txtView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/txtSolData"
-            android:textStyle="bold|italic"/>
+            android:textStyle="bold|italic" />
 
         <TextView
             android:id="@+id/txtSolData"
@@ -57,7 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/txtSolStatus"
-            android:textStyle="bold|italic"/>
+            android:textStyle="bold|italic" />
 
         <TextView
             android:id="@+id/txtSolStatus"
@@ -69,46 +71,46 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/txtSolDesc"
-            android:textStyle="bold|italic"/>
+            android:textStyle="bold|italic" />
 
         <TextView
             android:id="@+id/txtSolDesc"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/txtView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/txtSolTP"
-            android:textStyle="bold|italic"/>
+            android:textStyle="bold|italic" />
 
         <TextView
             android:id="@+id/txtSolTP"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/txtView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/txtSolValor"
-            android:textStyle="bold|italic"/>
+            android:textStyle="bold|italic" />
 
         <TextView
             android:id="@+id/txtSolValor"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
+            android:layout_height="wrap_content" />
 
 
     </LinearLayout>
 
 
-    <LinearLayout android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:gravity="center_vertical"
-        android:layout_height="wrap_content"
         android:padding="10dip">
 
         <Button
@@ -116,8 +118,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="aprovarSolicitacao"
             android:enabled="false"
+            android:onClick="aprovarSolicitacao"
             android:text="@string/btnEditSolAprovar" />
 
         <Button
@@ -125,8 +127,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="cancelarSolicitacao"
             android:enabled="false"
+            android:onClick="cancelarSolicitacao"
             android:text="@string/btnEditSolCancelar" />
 
     </LinearLayout>
