--- a/app/src/main/res/layout/activity_edit_psolicitacoes.xml
+++ b/app/src/main/res/layout/activity_edit_psolicitacoes.xml
@@ -1,22 +1,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
+    android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_width="fill_parent">
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
-    <LinearLayout android:layout_width="fill_parent"
+    <LinearLayout
         android:id="@+id/EditSolCabecalho"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:background="@color/colorPrimary"
+        android:orientation="horizontal"
         android:padding="10dip">
 
-        <TextView android:textColor="#FFFFFF"
+        <TextView
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_width="fill_parent"
             android:gravity="center_horizontal"
-            android:text="@string/llEditSolCabec" />
+            android:text="@string/llEditSolCabec"
+            android:textColor="#FFFFFF" />
 
     </LinearLayout>
 
@@ -25,27 +27,27 @@
         android:id="@+id/llSol"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_below="@id/EditSolCabecalho">
+        android:layout_below="@id/EditSolCabecalho"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/txtView1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/txtSolCodP"
-            android:textStyle="bold|italic"/>
+            android:textStyle="bold|italic" />
 
         <TextView
             android:id="@+id/txtSolCodP"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/txtView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/txtSolDataP"
-            android:textStyle="bold|italic"/>
+            android:textStyle="bold|italic" />
 
         <TextView
             android:id="@+id/txtSolDataP"
@@ -57,7 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/txtSolStatusP"
-            android:textStyle="bold|italic"/>
+            android:textStyle="bold|italic" />
 
         <TextView
             android:id="@+id/txtSolStatusP"
@@ -69,24 +71,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/txtSolEndP"
-            android:textStyle="bold|italic"/>
+            android:textStyle="bold|italic" />
 
         <TextView
             android:id="@+id/txtSolEndP"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/txtView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/txtSolDescP"
-            android:textStyle="bold|italic"/>
+            android:textStyle="bold|italic" />
 
         <TextView
             android:id="@+id/txtSolDescP"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/txtValoP"
@@ -94,7 +96,7 @@
             android:layout_height="wrap_content"
             android:text="@string/txtSolValorP"
             android:textStyle="bold|italic"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
 
         <EditText
             android:id="@+id/edtValor"
@@ -102,17 +104,17 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="numberDecimal"
-            android:visibility="invisible"
-            />
+            android:visibility="invisible" />
 
 
     </LinearLayout>
 
 
-    <LinearLayout android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:gravity="center_vertical"
-        android:layout_height="wrap_content"
         android:padding="10dip">
 
         <Button
@@ -120,8 +122,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="aprovarSolicitacao"
             android:enabled="false"
+            android:onClick="aprovarSolicitacao"
             android:text="@string/btnEditSolValor" />
 
     </LinearLayout>
