--- a/app/src/main/res/layout/activity_tordem_pagamento.xml
+++ b/app/src/main/res/layout/activity_tordem_pagamento.xml
@@ -13,9 +13,9 @@
 
         <ListView
             android:id="@+id/lvOrdemPagamento"
-            android:layout_below="@id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:layout_below="@id/toolbar">
 
         </ListView>
     </LinearLayout>
