--- a/app/src/main/res/layout/activity_add_csolicitacoes.xml
+++ b/app/src/main/res/layout/activity_add_csolicitacoes.xml
@@ -1,31 +1,33 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
+    android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_width="fill_parent">
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
-    <LinearLayout android:layout_width="fill_parent"
+    <LinearLayout
         android:id="@+id/AddSolcabecalho"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:background="@color/colorPrimary"
+        android:orientation="horizontal"
         android:padding="10dip">
 
 
-        <TextView android:textColor="#FFFFFF"
+        <TextView
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_width="fill_parent"
             android:gravity="center_horizontal"
-            android:text="@string/llAddSol" />
+            android:text="@string/llAddSol"
+            android:textColor="#FFFFFF" />
     </LinearLayout>
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_below="@id/AddSolcabecalho">
+        android:layout_below="@id/AddSolcabecalho"
+        android:orientation="vertical">
 
 
         <TextView
@@ -37,7 +39,7 @@
         <Spinner
             android:id="@+id/spinnerSTP"
             android:layout_width="match_parent"
-            android:layout_height="40dp"/>
+            android:layout_height="40dp" />
 
         <EditText
             android:id="@+id/txtAddTpDesc"
@@ -51,11 +53,13 @@
     </LinearLayout>
 
 
-    <LinearLayout android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:gravity="center_vertical"
-        android:layout_height="wrap_content"
         android:padding="10dip">
+
         <Button
             android:id="@+id/btnAddTPAdicionar"
             android:layout_width="0dp"
