--- a/app/src/main/res/layout/activity_tsolicitacoes_abertas.xml
+++ b/app/src/main/res/layout/activity_tsolicitacoes_abertas.xml
@@ -13,9 +13,9 @@
 
         <ListView
             android:id="@+id/lvPSolicitacoesAbertas"
-            android:layout_below="@id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:layout_below="@id/toolbar">
 
         </ListView>
     </LinearLayout>
