--- a/app/src/main/res/layout/activity_ttipo_prestador.xml
+++ b/app/src/main/res/layout/activity_ttipo_prestador.xml
@@ -7,8 +7,8 @@
     tools:context=".activities.administrador.TTipoPrestador">
 
     <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
         android:id="@+id/appbarlayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
@@ -32,9 +32,9 @@
 
         <ListView
             android:id="@+id/lvTPPrestador"
-            android:layout_below="@id/appbarlayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_below="@id/appbarlayout" />
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
