--- a/app/src/main/res/layout/content_ttipo_prestador.xml
+++ b/app/src/main/res/layout/content_ttipo_prestador.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activities.administrador.TTipoPrestador"
-    tools:showIn="@layout/activity_ttipo_prestador"
-    tools:ignore="MissingDefaultResource">
+    tools:ignore="MissingDefaultResource"
+    tools:showIn="@layout/activity_ttipo_prestador">
 
 </android.support.constraint.ConstraintLayout>
