--- a/app/src/main/res/layout/activity_painel_prestador.xml
+++ b/app/src/main/res/layout/activity_painel_prestador.xml
@@ -51,7 +51,7 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="16dp"
-                android:onClick="minhasSolicitacoes"
+                android:onClick="solicitacoesAbertas"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp">
 
